css/custom.css
h4{
  margin-bottom: 20px;
}
.custom-link{
  color: #EC3655;
  text-decoration: none;
  padding-bottom: 5px;
}

.custom-link.active,
.custom-link:hover {
  border-bottom: 1px solid #EC3655;
}

.custom-placeholder{
  background-color: white;
  box-shadow: 0px 10px 18px #dedede;
  height: 170px;
}

.custom-input, .custom-select{
  width:400px;
  padding:10px;
  border-width: thin;
  border-radius: 5px 5px 5px 5px;
  border-color: #dedede;
}

.custom-textarea{
  border-width: thin;
  border-radius: 5px 5px 5px 5px;
  border-color: #dedede;
}

.custom-section{
  margin-bottom: 50px;
}

.custom-div-section{
  margin-left: 70px;
}

.custom-item-container{
  background-color: white;
  box-shadow: 0px 10px 18px #dedede;
  height: 400px;
  width: 300px;
  margin: 10px;
  padding:15px;
}

.custom-center{
  margin-left: 10%;
  margin-right: 10%;
}

.custom-button, .button{
  background-color: #EC3655;
  color: white;
  padding: 15px;
  width: 200px;
  border: none;
}

.custom-table{
  border:1px solid;
  border-collapse: collapse;
}

.custom-div-main{
  background: transparent;
  position: relative;
}

.custom-item-image{
  width:470px;
  height:300px;
  background-size: cover;
  object-fit: cover;
}


.custom-item-image-medium{
  width:370px;
  height:200px;
  background-size: cover;
  object-fit: cover;
}

.custom-item-thumbnail{
  width:270px;
  height:200px;
  background-size: cover;
  object-fit: cover;
}

.item-section{
  margin-top: 100px;
}

.custom-item-profile{
  height: 500px;
}

.extra-margin-left{
  margin-left: 100px;
}

.extra-margin-right{
  margin-right: 120px;
}

.custom-div-height{
  height:1500px;
}

